Update project layouts and ignore large PDF

--- a/projects/oversea.html
+++ b/projects/oversea.html
@@ -13,18 +13,20 @@
     <hr class="rule">
     
     <h4 class="section__subtitle">Overseas Collaboration</h4>
-
-    <div class="card card--accent-left">
-        <div class="hscroll" aria-label="쌍령근린공원 이미지">
-            <figure id="s1"><img src="projectimages/쌍령근린공원1.png" alt="쌍령근린공원 1"></figure>
-            <figure id="s2"><img src="projectimages/쌍령근린공원2.png" alt="쌍령근린공원 2"></figure>
-            <figure id="s3"><img src="projectimages/쌍령근린공원3.png" alt="쌍령근린공원 3"></figure>
+    
+    <div class="project-gallery">
+        <div class="card card--accent-left">
+            <div class="hscroll" aria-label="쌍령근린공원 이미지">
+                <figure id="s1"><img src="projectimages/쌍령근린공원1.png" alt="쌍령근린공원 1"></figure>
+                <figure id="s2"><img src="projectimages/쌍령근린공원2.png" alt="쌍령근린공원 2"></figure>
+                <figure id="s3"><img src="projectimages/쌍령근린공원3.png" alt="쌍령근린공원 3"></figure>
+            </div>
+            <dl class="dl dl--flush">
+                <dt><b>쌍령근린공원 민간공원조성 특례사업</b></dt>
+                <dd>공원 내 건축물 4개동 with Meier Partners, 경기도 광주시</dd>
+            </dl>
         </div>
-        <dl class="dl dl--flush">
-            <dt><b>쌍령근린공원 민간공원조성 특례사업</b></dt>
-            <dd>공원 내 건축물 4개동 with Meier Partners, 경기도 광주시</dd>
-        </dl>
-    </div>
+    </div>  
 
 
     <hr class="rule">
