--- a/projects/plant.html
+++ b/projects/plant.html
@@ -15,77 +15,79 @@
     
     <h4 class="section__subtitle">Plants</h4>
     <hr class="rule">
+    <div class="project-gallery">
 
-    <div class="card card--accent-left">
-        <div class="hscroll" aria-label="삼우메디안 이미지">
-            <figure id="s1"><img src="projectimages/삼우메디안1.png" alt="삼우메디안 1"></figure>
-            <figure id="s2"><img src="projectimages/삼우메디안2.png" alt="삼우메디안 2"></figure>
+        <div class="card card--accent-left">
+            <div class="hscroll" aria-label="삼우메디안 이미지">
+                <figure id="s1"><img src="projectimages/삼우메디안1.png" alt="삼우메디안 1"></figure>
+                <figure id="s2"><img src="projectimages/삼우메디안2.png" alt="삼우메디안 2"></figure>
+            </div>
+            <dl class="dl dl--flush">
+                <dt><b>삼우메디안 예산공장 증축공사 2016</b></dt>
+                <dd>위치: 충청남도 예산군 신암면추사로 235-15, 대지면적: 8,122.00 ㎡, 규모: 지상 3층</dd>
+            </dl>
         </div>
-        <dl class="dl dl--flush">
-            <dt><b>삼우메디안 예산공장 증축공사 2016</b></dt>
-            <dd>위치: 충청남도 예산군 신암면추사로 235-15, 대지면적: 8,122.00 ㎡, 규모: 지상 3층</dd>
-        </dl>
-    </div>
 
-    <div class="card card--accent-left">
-        <div class="hscroll" aria-label="바이오씨앤디 이미지">
-            <figure id="s1"><img src="projectimages/바이오씨앤디1.png" alt="바이오씨앤디 1"></figure>
-            <figure id="s2"><img src="projectimages/바이오씨앤디2.png" alt="바이오씨앤디 2"></figure>
+        <div class="card card--accent-left">
+            <div class="hscroll" aria-label="바이오씨앤디 이미지">
+                <figure id="s1"><img src="projectimages/바이오씨앤디1.png" alt="바이오씨앤디 1"></figure>
+                <figure id="s2"><img src="projectimages/바이오씨앤디2.png" alt="바이오씨앤디 2"></figure>
+            </div>
+            <dl class="dl dl--flush">
+                <dt><b>바이오씨앤디 강릉공장 증축공사 2016</b></dt>
+                <dd>위치: 강원도 강릉시 대전동 916-5, 대지면적: 10,531.4 ㎡, 규모: 지상 3층</dd>
+            </dl>
         </div>
-        <dl class="dl dl--flush">
-            <dt><b>바이오씨앤디 강릉공장 증축공사 2016</b></dt>
-            <dd>위치: 강원도 강릉시 대전동 916-5, 대지면적: 10,531.4 ㎡, 규모: 지상 3층</dd>
-        </dl>
-    </div>
 
-    <div class="card card--accent-left">
-        <div class="hscroll" aria-label="하나제약 이미지">
-            <figure id="s1"><img src="projectimages/하나제약1.png" alt="하나제약 1"></figure>
+        <div class="card card--accent-left">
+            <div class="hscroll" aria-label="하나제약 이미지">
+                <figure id="s1"><img src="projectimages/하나제약1.png" alt="하나제약 1"></figure>
+            </div>
+            <dl class="dl dl--flush">
+                <dt><b>하나제약(주) 발안 GMP공장</b></dt>
+                <dd>위치: 경기도 화성시 향남면 발안지방산업단지 D30-1, 연면적: 4,716.54 ㎡, 규모: 지상 3층</dd>
+            </dl>
         </div>
-        <dl class="dl dl--flush">
-            <dt><b>하나제약(주) 발안 GMP공장</b></dt>
-            <dd>위치: 경기도 화성시 향남면 발안지방산업단지 D30-1, 연면적: 4,716.54 ㎡, 규모: 지상 3층</dd>
-        </dl>
-    </div>
 
-    <div class="card card--accent-left">
-        <div class="hscroll" aria-label="휴젤 이미지">
-            <figure id="s1"><img src="projectimages/휴젤1.png" alt="휴젤 1"></figure>
+        <div class="card card--accent-left">
+            <div class="hscroll" aria-label="휴젤 이미지">
+                <figure id="s1"><img src="projectimages/휴젤1.png" alt="휴젤 1"></figure>
+            </div>
+            <dl class="dl dl--flush">
+                <dt><b>휴젤(주) 춘천공장 신축공사</b></dt>
+                <dd>위치: 강원도 춘천시 동내면 거두리 1180, 연면적: 7,668.89 ㎡, 규모: 지상 3층 / 지하 1층</dd>
+            </dl>
         </div>
-        <dl class="dl dl--flush">
-            <dt><b>휴젤(주) 춘천공장 신축공사</b></dt>
-            <dd>위치: 강원도 춘천시 동내면 거두리 1180, 연면적: 7,668.89 ㎡, 규모: 지상 3층 / 지하 1층</dd>
-        </dl>
-    </div>
 
-    <div class="card card--accent-left">
-        <div class="hscroll" aria-label="한미약품 이미지">
-            <figure id="s1"><img src="projectimages/한미약품1.png" alt="한미약품 1"></figure>
+        <div class="card card--accent-left">
+            <div class="hscroll" aria-label="한미약품 이미지">
+                <figure id="s1"><img src="projectimages/한미약품1.png" alt="한미약품 1"></figure>
+            </div>
+            <dl class="dl dl--flush">
+                <dt><b>한미약품(주) 평택공장 신축공사</b></dt>
+                <dd>위치: 경기도 평택시 팽성읍 추팔리 395, 연면적: 19,267.06 ㎡, 규모: 지상 3층 / 지하 1층</dd>
+            </dl>
         </div>
-        <dl class="dl dl--flush">
-            <dt><b>한미약품(주) 평택공장 신축공사</b></dt>
-            <dd>위치: 경기도 평택시 팽성읍 추팔리 395, 연면적: 19,267.06 ㎡, 규모: 지상 3층 / 지하 1층</dd>
-        </dl>
-    </div>
 
-    <div class="card card--accent-left">
-        <div class="hscroll" aria-label="한국코러스 이미지">
-            <figure id="s1"><img src="projectimages/한국코러스1.png" alt="한국코러스 1"></figure>
+        <div class="card card--accent-left">
+            <div class="hscroll" aria-label="한국코러스 이미지">
+                <figure id="s1"><img src="projectimages/한국코러스1.png" alt="한국코러스 1"></figure>
+            </div>
+            <dl class="dl dl--flush">
+                <dt><b>한국코러스 제약(주) 춘천공장 증축공사</b></dt>
+                <dd>위치: 강원도 춘천시 동내면 거두리 1181번지, 연면적: 2,388.00 ㎡, 규모: 지상 3층</dd>
+            </dl>
         </div>
-        <dl class="dl dl--flush">
-            <dt><b>한국코러스 제약(주) 춘천공장 증축공사</b></dt>
-            <dd>위치: 강원도 춘천시 동내면 거두리 1181번지, 연면적: 2,388.00 ㎡, 규모: 지상 3층</dd>
-        </dl>
-    </div>
 
-    <div class="card card--accent-left">
-        <div class="hscroll" aria-label="줄기세포·재생센터 이미지">
-            <figure id="s1"><img src="projectimages/줄기세포·재생센터1.png" alt="줄기세포·재생센터 1"></figure>
+        <div class="card card--accent-left">
+            <div class="hscroll" aria-label="줄기세포·재생센터 이미지">
+                <figure id="s1"><img src="projectimages/줄기세포·재생센터1.png" alt="줄기세포·재생센터 1"></figure>
+            </div>
+            <dl class="dl dl--flush">
+                <dt><b>국립 줄기세포·재생센터 건립공사</b></dt>
+                <dd>위치: 충청북도 청원군 오승읍 연제리 663-2, 연면적: 6,668.97 ㎡, 규모: 지상 5층 / 지하 1층</dd>
+            </dl>
         </div>
-        <dl class="dl dl--flush">
-            <dt><b>국립 줄기세포·재생센터 건립공사</b></dt>
-            <dd>위치: 충청북도 청원군 오승읍 연제리 663-2, 연면적: 6,668.97 ㎡, 규모: 지상 5층 / 지하 1층</dd>
-        </dl>
     </div>
 
     <a href="../project.html" class="button button--project">
