Updated based on the feedback

--- a/about.html
+++ b/about.html
@@ -46,6 +46,7 @@ MADI controls the overall progress of the project and construction to lead to th
         <li>지구단위계획 / District Unit Planning</li>
         <li>건축계획, 설계, 감리 / Architectural Planning, Design, and Supervision</li>
         <li>주거단지 설계 / Residential Complex Design</li>
+        <li>병원 설계 / Medical Facility Design</li>
         <li>플랜트, 제약 / Plant and Pharmaceuticals</li>
         <li>태양광 발전 사업 / Solar Energy Development</li>
         <li>인테리어 / Interior Design</li>
