Updated based on missed factors on the feedback

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
               <a href="projects/oversea.html" class="button button--project">Overseas Collaboration</a>
               <a href="projects/commercial.html" class="button button--project">Corporate / Commercial</a>
               <a href="projects/cultural.html" class="button button--project">Educational / Cultural</a> 
-              <a href="projects/plant.html" class="button button--project">Plant</a>
+              <a href="projects/plant.html" class="button button--project">Medical Facility / Plant</a>
               <a href="projects/solar.html" class="button button--project">Solar Power</a>
             </div>
           </section>
