--- a/projects/solar.html
+++ b/projects/solar.html
@@ -19,34 +19,27 @@
     <div class="project-gallery">
         <div class="card card--accent-left">
             <div class="hscroll" aria-label="나비 이미지">
-                <figure id="s1"><img src="projectimages/나비1.png" alt="나비 1"></figure>
-                <figure id="s2"><img src="projectimages/나비2.png" alt="나비 2"></figure>
-                <figure id="s3"><img src="projectimages/나비3.png" alt="나비 3"></figure>
+                <a href="../project-detail.html?id=solar-nabi&cat=solar">
+                    <img src="projectimages/나비1.png" alt="나비 1">
+                </a>
             </div>
-            <dl class="dl dl--flush">
-                <dt><b>함평 나비 축제 주차장 태양광 발전 사업 2009</b></dt>
-                <dd>위치: 함평 나비축제장, 규모: 지상 주차장 상부 태양광 설치 (2MW)</dd>
-            </dl>
         </div>
 
         <div class="card card--accent-left">
             <div class="hscroll" aria-label="오피스텔 이미지">
-                <figure id="s1"><img src="projectimages/오피스텔1.png" alt="오피스텔 1"></figure>
+                <a href="../project-detail.html?id=solar-officetel&cat=solar">
+                    <img src="projectimages/오피스텔1.png" alt="오피스텔 1">
+                </a>
             </div>
-            <dl class="dl dl--flush">
-                <dt><b>역삼동 오피스텔 태양광 발전사업 2021</b></dt>
-                <dd>위치: 서울특별시 강남구 역삼동, 규모: 오피스텔 BIPV (건물일체형태양광발전시스템)</dd>
-            </dl>
+            
         </div>
 
         <div class="card card--accent-left">
             <div class="hscroll" aria-label="오성산 이미지">
-                <figure id="s1"><img src="projectimages/오성산1.png" alt="오성산 1"></figure>
+                <a href="../project-detail.html?id=solar-oseongsan&cat=solar">
+                    <img src="projectimages/오성산1.png" alt="오성산 1">
+                </a>
             </div>
-            <dl class="dl dl--flush">
-                <dt><b>오성산 관광 자원화 컨셉 공모 (태양광발전 및 BIPV 제안) 2022</b></dt>
-                <dd>위치: 오성산 공원, 규모: 주차장 상부 및 BIPV (0.5 MW)</dd>
-            </dl>
         </div>
     </div>
     <a href="../project.html" class="button button--project">
