All other project pages updated to have the gallery format

--- a/projects/cultural.html
+++ b/projects/cultural.html
@@ -5,74 +5,60 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cultural Building Designs</title>
     <link rel="stylesheet" href="../style.css">
-
 </head>
+
 <body>
     <header class="header">
       <img src="../images/MadiLogo.png" alt="MADI Design Group Logo" class="logo">
     </header>
+
     <hr class="rule">
-    
     <h4 class="section__subtitle">Cultural</h4>
     <hr class="rule">
     
     <div class="project-gallery">
+
+        <!-- 아름갤러리 -->
         <div class="card card--accent-left">
             <div class="hscroll" aria-label="아름갤러리 이미지">
-                <figure id="s1"><img src="projectimages/아름갤러리1.png" alt="아름갤러리 1"></figure>
-                <figure id="s2"><img src="projectimages/아름갤러리2.png" alt="아름갤러리 2"></figure>
-                <figure id="s3"><img src="projectimages/아름갤러리3.png" alt="아름갤러리 3"></figure>
-
+                <a href="../project-detail.html?id=cultural-arum&cat=cultural">
+                    <img src="projectimages/아름갤러리1.png" alt="아름갤러리 1">
+                </a>
             </div>
-            <dl class="dl dl--flush">
-                <dt><b>성북동 아름갤러리 2016</b></dt>
-                <dd>위치: 서울시 성북구 성북동, 연면적: 234.18 ㎡ / 288.57 ㎡, 대지면적: 271 ㎡ / 145 ㎡, 용도: 제 2종 근린생활시설 / 문화 및 집회시설</dd>
-            </dl>
         </div>
 
+        <!-- 덕천지구 -->
         <div class="card card--accent-left">
             <div class="hscroll" aria-label="덕천지구 이미지">
-                <figure id="s1"><img src="projectimages/덕천지구1.png" alt="덕천지구 1"></figure>
-                <figure id="s2"><img src="projectimages/덕천지구2.png" alt="덕천지구 2"></figure>
-                <figure id="s3"><img src="projectimages/덕천지구3.png" alt="덕천지구 3"></figure>
-
+                <a href="../project-detail.html?id=cultural-deokcheon&cat=cultural">
+                    <img src="projectimages/덕천지구1.png" alt="덕천지구 1">
+                </a>
             </div>
-            <dl class="dl dl--flush">
-                <dt><b>안양 덕천지구 2016</b></dt>
-                <dd>위치: 경기도 안양시 덕천지구, 연면적: 1,363.92 ㎡, 대지면적: 500 ㎡, 용도: 교육연구시설 / 제 1종 근린생활시설</dd>
-            </dl>
         </div>
 
+        <!-- 복합공공시설 -->
         <div class="card card--accent-left">
             <div class="hscroll" aria-label="복합공공시설 이미지">
-                <figure id="s1"><img src="projectimages/복합공공시설1.png" alt="복합공공시설 1"></figure>
-                <figure id="s2"><img src="projectimages/복합공공시설2.png" alt="복합공공시설 2"></figure>
-                <figure id="s3"><img src="projectimages/복합공공시설3.png" alt="복합공공시설 3"></figure>
-                <figure id="s4"><img src="projectimages/복합공공시설4.png" alt="복합공공시설 4"></figure>
+                <a href="../project-detail.html?id=cultural-public&cat=cultural">
+                    <img src="projectimages/복합공공시설1.png" alt="복합공공시설 1">
+                </a>
             </div>
-            <dl class="dl dl--flush">
-                <dt><b>부천시 복합공공시설 연구용역 2012</b></dt>
-                <dd>위치: 경기도 부천시 소사구 괴안동, 연면적: 8,838.08 ㎡, 규모: 지상 6층</dd>
-            </dl>
         </div>
 
+        <!-- 에이스빌딩 -->
         <div class="card card--accent-left">
             <div class="hscroll" aria-label="에이스빌딩 이미지">
-                <figure id="s1"><img src="projectimages/에이스빌딩1.png" alt="에이스빌딩 1"></figure>
+                <a href="../project-detail.html?id=cultural-ace&cat=cultural">
+                    <img src="projectimages/에이스빌딩1.png" alt="에이스빌딩 1">
+                </a>
             </div>
-            <dl class="dl dl--flush">
-                <dt><b>서초동 에이스빌딩 리모델링공사 2015</b></dt>
-                <dd>위치: 서울시 서초구 서초동 1720-2번지, 연면적: 7,805.04 ㎡, 규모: 지상 5층 / 지하 4층</dd>
-            </dl>
         </div>
+
     </div>
 
-    <a href="../project.html" class="button button--project">
-        For more projects
-    </a>
+    <a href="../project.html" class="button button--project">For more projects</a>
     <hr class="rule">
-    <a href="../index.html" class="button button--project">
-        Back to home page
-    </a>
+    <a href="../index.html" class="button button--project">Back to home page</a>
+
 </body>
 </html>
