--- a/projects/oversea.html
+++ b/projects/oversea.html
@@ -6,36 +6,33 @@
     <title>Overseas Collaboration Designs</title>
     <link rel="stylesheet" href="../style.css">
 </head>
+
 <body>
     <header class="header">
       <img src="../images/MadiLogo.png" alt="MADI Design Group Logo" class="logo">
     </header>
+
     <hr class="rule">
-    
     <h4 class="section__subtitle">Overseas Collaboration</h4>
-    
+
     <div class="project-gallery">
+
+        <!-- 쌍령근린공원 -->
         <div class="card card--accent-left">
             <div class="hscroll" aria-label="쌍령근린공원 이미지">
-                <figure id="s1"><img src="projectimages/쌍령근린공원1.png" alt="쌍령근린공원 1"></figure>
-                <figure id="s2"><img src="projectimages/쌍령근린공원2.png" alt="쌍령근린공원 2"></figure>
-                <figure id="s3"><img src="projectimages/쌍령근린공원3.png" alt="쌍령근린공원 3"></figure>
+                <a href="../project-detail.html?id=oversea-ssangryeong&cat=oversea">
+                    <img src="projectimages/쌍령근린공원1.png" alt="쌍령근린공원 1">
+                </a>
             </div>
-            <dl class="dl dl--flush">
-                <dt><b>쌍령근린공원 민간공원조성 특례사업</b></dt>
-                <dd>공원 내 건축물 4개동 with Meier Partners, 경기도 광주시</dd>
-            </dl>
         </div>
-    </div>  
 
+    </div>
 
     <hr class="rule">
-    <a href="../project.html" class="button button--project">
-        For more projects
-    </a>
+
+    <a href="../project.html" class="button button--project">For more projects</a>
     <hr class="rule">
-    <a href="../index.html" class="button button--project">
-        Back to home page
-    </a>
+    <a href="../index.html" class="button button--project">Back to home page</a>
+
 </body>
 </html>
