Editted borders on image files

--- a/projects/oversea.html
+++ b/projects/oversea.html
@@ -26,6 +26,15 @@
             </div>
         </div>
 
+        <!-- 잠수교 -->
+        <div class="card card--accent-left">
+            <div class="hscroll">
+                <a href="../project-detail.html?id=prize-jamsugyo&cat=prize">
+                    <img src="projectimages/잠수교1.png" alt="잠수교 1">
+                </a>
+            </div>
+        </div>
+
     </div>
 
     <hr class="rule">
