--- a/projects/solar.html
+++ b/projects/solar.html
@@ -37,7 +37,7 @@
         <div class="card card--accent-left">
             <div class="hscroll" aria-label="오성산 이미지">
                 <a href="../project-detail.html?id=solar-oseongsan&cat=solar">
-                    <img src="projectimages/오성산1.png" alt="오성산 1">
+                    <img src="projectimages/오성산1.jpg" alt="오성산 1">
                 </a>
             </div>
         </div>
