Added Hospital projects

--- a/projects/plant.html
+++ b/projects/plant.html
@@ -81,6 +81,22 @@
             </div>
         </div>
 
+        <div class="card card--accent-left">
+            <div class="hscroll" aria-label="GMP 이미지">
+                <a href="../project-detail.html?id=hospital-CatholicGMP&cat=plant">
+                    <img src="projectimages/GMP1.png" alt="GMP 1">
+                </a>
+            </div>
+        </div>
+
+        <div class="card card--accent-left">
+            <div class="hscroll" aria-label="BSL3 이미지">
+                <a href="../project-detail.html?id=hospital-BSL3&cat=plant">
+                    <img src="projectimages/BSL3_1.png" alt="BSL3 1">
+                </a>
+            </div>
+        </div>
+
     </div>
 
     <a href="../project.html" class="button button--project">For more projects</a>
