Updating the website into more Korean content

--- a/about.html
+++ b/about.html
@@ -41,16 +41,16 @@ MADI controls the overall progress of the project and construction to lead to th
     <h4 class="section__subtitle">주요업무</h4>
     <!-- Unordered list for services -->
     <ul class="list card">
-        <li>개발기획 컨설팅 / Development Planning Consulting</li>
-        <li>도시개발 및 설계 / Urban Development and Design</li>
-        <li>지구단위계획 / District Unit Planning</li>
-        <li>건축계획, 설계, 감리 / Architectural Planning, Design, and Supervision</li>
-        <li>주거단지 설계 / Residential Complex Design</li>
-        <li>병원 설계 / Medical Facility Design</li>
-        <li>플랜트, 제약 / Plant and Pharmaceuticals</li>
-        <li>태양광 발전 사업 / Solar Energy Development</li>
-        <li>인테리어 / Interior Design</li>
-        <li>개발타당성 검토 / Development feasibility review</li>
+        <li>개발기획 컨설팅</li>
+        <li>도시개발 및 설계</li>
+        <li>지구단위계획</li>
+        <li>건축계획, 설계, 감리</li>
+        <li>주거단지 설계</li>
+        <li>병원 설계</li>
+        <li>플랜트, 제약</li>
+        <li>태양광 발전 사업</li>
+        <li>인테리어</li>
+        <li>개발타당성 검토</li>
     </ul>
     </section>
         
