--- a/projects/oversea.html
+++ b/projects/oversea.html
@@ -13,7 +13,7 @@
     </header>
 
     <hr class="rule">
-    <h4 class="section__subtitle">Overseas Collaboration</h4>
+    <h4 class="section__subtitle">해외 협력</h4>
 
     <div class="project-gallery">
 
