--- a/projects/plant.html
+++ b/projects/plant.html
@@ -13,7 +13,7 @@
     </header>
 
     <hr class="rule">
-    <h4 class="section__subtitle">Plants</h4>
+    <h4 class="section__subtitle">병원, 제약, 공장</h4>
     <hr class="rule">
 
     <div class="project-gallery">
