--- a/projects/prize.html
+++ b/projects/prize.html
@@ -13,7 +13,7 @@
     </header>
 
     <hr class="rule">
-    <h4 class="section__subtitle">Prize-winning Work</h4>
+    <h4 class="section__subtitle">공모전 (현상설계)</h4>
 
     <div class="project-gallery">
 
@@ -33,6 +33,14 @@
             <div class="hscroll">
                 <a href="../project-detail.html?id=prize-jamsugyo&cat=prize">
                     <img src="projectimages/잠수교1.png" alt="잠수교 1">
+                </a>
+            </div>
+        </div>
+
+        <div class="card card--accent-left">
+            <div class="hscroll" aria-label="오성산 이미지">
+                <a href="../project-detail.html?id=solar-oseongsan&cat=solar">
+                    <img src="projectimages/오성산1.jpg" alt="오성산 1">
                 </a>
             </div>
         </div>
