--- a/projects/residential.html
+++ b/projects/residential.html
@@ -13,7 +13,7 @@
     </header>
 
     <hr class="rule">
-    <h4 class="section__subtitle">Residential</h4>
+    <h4 class="section__subtitle">주거시설</h4>
 
     <div class="project-gallery">
 
