--- a/projects/solar.html
+++ b/projects/solar.html
@@ -13,7 +13,7 @@
     </header>
     <hr class="rule">
     
-    <h4 class="section__subtitle">Solar Power</h4>
+    <h4 class="section__subtitle">기타</h4>
     <hr class="rule">
 
     <div class="project-gallery">
