--- a/index.html
+++ b/index.html
@@ -68,18 +68,17 @@
           <section class="section section--center">
             <h2 class="section__title">
               <span class="title-kr">주요 분야</span>
-              <span class="title-en">Practice Areas</span>
             </h2>
             <hr class="rule--accent">
 
             <div class="practice-links">
-              <a href="projects/prize.html" class="button button--project">Prize-winning Work</a>
-              <a href="projects/residential.html" class="button button--project">Residential</a>
-              <a href="projects/oversea.html" class="button button--project">Overseas Collaboration</a>
-              <a href="projects/commercial.html" class="button button--project">Corporate / Commercial</a>
-              <a href="projects/cultural.html" class="button button--project">Educational / Cultural</a> 
-              <a href="projects/plant.html" class="button button--project">Medical Facility / Plant</a>
-              <a href="projects/solar.html" class="button button--project">Solar Power</a>
+              <a href="projects/prize.html" class="button button--project">공모전 (현상설계)</a>
+              <a href="projects/residential.html" class="button button--project">주거시설</a>
+              <a href="projects/commercial.html" class="button button--project">업무시설</a>
+              <a href="projects/cultural.html" class="button button--project">교육, 문화시설</a>
+              <a href="projects/plant.html" class="button button--project">병원, 제약, 공장</a>
+              <a href="projects/oversea.html" class="button button--project">해외 협력</a>
+              <a href="projects/solar.html" class="button button--project">기타</a>
             </div>
           </section>
 
