--- a/projects/commercial.html
+++ b/projects/commercial.html
@@ -13,7 +13,7 @@
     </header>
 
     <hr class="rule">
-    <h4 class="section__subtitle">Commercial</h4>
+    <h4 class="section__subtitle">업무시설</h4>
 
     <div class="project-gallery">
 
