--- a/projects/cultural.html
+++ b/projects/cultural.html
@@ -13,7 +13,7 @@
     </header>
 
     <hr class="rule">
-    <h4 class="section__subtitle">Cultural</h4>
+    <h4 class="section__subtitle">교육, 문화시설</h4>
     <hr class="rule">
     
     <div class="project-gallery">
