Changed the order of prize winning projects

--- a/projects/cultural.html
+++ b/projects/cultural.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cultural Building Designs</title>
+    <title>교육, 문화시설</title>
     <link rel="stylesheet" href="../style.css">
 </head>
 
