--- a/projects/plant.html
+++ b/projects/plant.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Plant Designs</title>
+    <title>병원, 제약, 공장</title>
     <link rel="stylesheet" href="../style.css">
 </head>
 
