--- a/projects/prize.html
+++ b/projects/prize.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prize-Winning Designs</title>
+    <title>공모전 (현상설계)</title>
     <link rel="stylesheet" href="../style.css">
 </head>
 
@@ -17,16 +17,6 @@
 
     <div class="project-gallery">
 
-        <!-- 세종대로 -->
-        <div class="card card--accent-left">
-            <div class="hscroll">
-                <a href="../project-detail.html?id=prize-sejong&cat=prize">
-                    <img src="projectimages/역사문화1.png" alt="세종대로 1">
-                </a>
-            </div>
-        </div>
-
-        <hr class="rule">
 
         <!-- 잠수교 -->
         <div class="card card--accent-left">
@@ -41,6 +31,15 @@
             <div class="hscroll" aria-label="오성산 이미지">
                 <a href="../project-detail.html?id=solar-oseongsan&cat=solar">
                     <img src="projectimages/오성산1.jpg" alt="오성산 1">
+                </a>
+            </div>
+        </div>
+        
+        <!-- 세종대로 -->
+        <div class="card card--accent-left">
+            <div class="hscroll">
+                <a href="../project-detail.html?id=prize-sejong&cat=prize">
+                    <img src="projectimages/역사문화1.png" alt="세종대로 1">
                 </a>
             </div>
         </div>
