--- a/projects/commercial.html
+++ b/projects/commercial.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Commercial / Corporate Designs</title>
+    <title>업무시설</title>
     <link rel="stylesheet" href="../style.css">
 </head>
 
