--- a/projects/residential.html
+++ b/projects/residential.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Residential Designs</title>
+    <title>주거시설</title>
     <link rel="stylesheet" href="../style.css">
 </head>
 
