--- a/projects/solar.html
+++ b/projects/solar.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Solar Power Designs</title>
+    <title>기타</title>
     <link rel="stylesheet" href="../style.css">
 
 </head>
