Some changes to the design and layout

--- a/projects/prize.html
+++ b/projects/prize.html
@@ -17,7 +17,6 @@
 
     <div class="project-gallery">
 
-
         <!-- 잠수교 -->
         <div class="card card--accent-left">
             <div class="hscroll">
@@ -29,7 +28,7 @@
 
         <div class="card card--accent-left">
             <div class="hscroll" aria-label="오성산 이미지">
-                <a href="../project-detail.html?id=solar-oseongsan&cat=solar">
+                <a href="../project-detail.html?id=solar-oseongsan&cat=prize">
                     <img src="projectimages/오성산1.jpg" alt="오성산 1">
                 </a>
             </div>
