--- a/projects/oversea.html
+++ b/projects/oversea.html
@@ -17,6 +17,15 @@
 
     <div class="project-gallery">
 
+         <!-- 잠수교 -->
+        <div class="card card--accent-left">
+            <div class="hscroll">
+                <a href="../project-detail.html?id=prize-jamsugyo&cat=oversea">
+                    <img src="projectimages/잠수교1.png" alt="잠수교 1">
+                </a>
+            </div>
+        </div>
+        
         <!-- 쌍령근린공원 -->
         <div class="card card--accent-left">
             <div class="hscroll" aria-label="쌍령근린공원 이미지">
@@ -26,14 +35,7 @@
             </div>
         </div>
 
-        <!-- 잠수교 -->
-        <div class="card card--accent-left">
-            <div class="hscroll">
-                <a href="../project-detail.html?id=prize-jamsugyo&cat=prize">
-                    <img src="projectimages/잠수교1.png" alt="잠수교 1">
-                </a>
-            </div>
-        </div>
+       
 
     </div>
 
