Added a project called Bestian

--- a/projects/plant.html
+++ b/projects/plant.html
@@ -97,6 +97,14 @@
             </div>
         </div>
 
+        <div class="card card--accent-left">
+            <div class="hscroll" aria-label="Bestian 이미지">
+                <a href="../project-detail.html?id=hospital-BSL3&cat=plant">
+                    <img src="projectimages/Bestian1.jpg" alt="Bestian 1">
+                </a>
+            </div>
+        </div>
+
     </div>
 
     
