--- a/projects/plant.html
+++ b/projects/plant.html
@@ -99,7 +99,7 @@
 
         <div class="card card--accent-left">
             <div class="hscroll" aria-label="Bestian 이미지">
-                <a href="../project-detail.html?id=hospital-BSL3&cat=plant">
+                <a href="../project-detail.html?id=hospital-Bestian&cat=plant">
                     <img src="projectimages/Bestian1.jpg" alt="Bestian 1">
                 </a>
             </div>
