--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="project.html">Projects</a></li>
+          <li><a href="project.html">Works</a></li>
           <li><a href="people.html">People</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
