Instead of a back to homepage button, updated it so that the navigation bar appears in the main 5 pages

--- a/about.html
+++ b/about.html
@@ -10,6 +10,15 @@
 <body>
     <header class="header">
       <img src="images/MadiLogo.png" alt="MADI Design Group Logo" class="logo">
+      <nav class="navbar">
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="project.html">Works</a></li>
+          <li><a href="people.html">People</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
     </header>
     
     <!-- ===== 철학 / Spirit ===== -->
@@ -55,10 +64,6 @@ MADI controls the overall progress of the project and construction to lead to th
     </section>
         
     <hr class="rule">
-
-    <a href="index.html" class="button button--project">
-        Back to home page
-    </a>
 
     <!-- ===== Footer (kept very simple) ===== -->
     <footer class="footer">
