--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,15 @@
 <body>
     <header class="header">
       <img src="images/MadiLogo.png" alt="MADI Design Group Logo" class="logo">
+      <nav class="navbar">
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="project.html">Works</a></li>
+          <li><a href="people.html">People</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
     </header>
 
     <!-- Description List: like a mini dictionary, shown as a "card" -->
@@ -36,10 +45,6 @@
         </section>
         
     <hr class="rule">
-
-    <a href="index.html" class="button button--project">
-        Back to home page
-    </a>
 
     <!-- ===== Footer (kept very simple) ===== -->
     <footer class="footer">
