--- a/people.html
+++ b/people.html
@@ -9,6 +9,15 @@
 <body>
     <header class="header">
       <img src="images/MadiLogo.png" alt="MADI Design Group Logo" class="logo">
+      <nav class="navbar">
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="project.html">Works</a></li>
+          <li><a href="people.html">People</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
     </header>
     <!-- ===== Organization (simple ordered list with nested unordered lists) ===== -->
         <section id="organization" class="section">
@@ -39,13 +48,7 @@
           </ol>
         </section>
     
-    <hr class="rule">
-
-    <a href="index.html" class="button button--project">
-        Back to home page
-    </a>
-
-    
+    <hr class="rule">    
 
     <!-- ===== Footer (kept very simple) ===== -->
     <footer class="footer">
