--- a/project.html
+++ b/project.html
@@ -9,6 +9,16 @@
 <body>
     <header class="header">
       <img src="images/MadiLogo.png" alt="MADI Design Group Logo" class="logo">
+
+      <nav class="navbar">
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="project.html">Works</a></li>
+          <li><a href="people.html">People</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
     </header>
     <section id="projects" class="section">
         <a href="projects/prize.html" class="button button--project">공모전 (현상설계)</a>
@@ -22,10 +32,6 @@
 
 
     <hr class="rule">
-
-    <a href="index.html" class="button button--project">
-        Back to home page
-    </a>
     <!-- ===== Footer (kept very simple) ===== -->
     <footer class="footer">
     <hr class="rule">
