--- a/projects/cultural.html
+++ b/projects/cultural.html
@@ -55,6 +55,14 @@
             </div>
         </div>
 
+        <div class="card card--accent-left">
+            <div class="hscroll" aria-label="Bestian 이미지">
+                <a href="../project-detail.html?id=hospital-Bestian&cat=plant">
+                    <img src="projectimages/Bestian1.jpg" alt="Bestian 1">
+                </a>
+            </div>
+        </div>
+
     </div>
 
     <a href="../project.html" class="button button--project">For more projects</a>
