풍석미디어: 교육문화 + 현상설계 포함, 역삼동 오피스텔: 기타 + 업무시설  포함

--- a/projects/commercial.html
+++ b/projects/commercial.html
@@ -16,6 +16,15 @@
     <h4 class="section__subtitle">업무시설</h4>
 
     <div class="project-gallery">
+        
+        <!-- 역삼동 오피스텔 태양광 발전사업 2021 -->
+        <div class="card card--accent-left">
+            <div class="hscroll" aria-label="오피스텔 이미지">
+                <a href="../project-detail.html?id=solar-officetel&cat=solar">
+                    <img src="projectimages/오피스텔1.png" alt="오피스텔 1">
+                </a>
+            </div>
+        </div> 
 
         <!-- 구미환경개선펀드 -->
         <div class="card card--accent-left">
