--- a/projects/cultural.html
+++ b/projects/cultural.html
@@ -56,6 +56,14 @@
         </div>
 
         <div class="card card--accent-left">
+            <div class="hscroll">
+                <a href="../project-detail.html?id=prize-poongseok&cat=prize">
+                    <img src="projectimages/poongseok1.jpg" alt="풍석 1">
+                </a>
+            </div>
+        </div>
+        
+        <div class="card card--accent-left">
             <div class="hscroll" aria-label="Bestian 이미지">
                 <a href="../project-detail.html?id=hospital-Bestian&cat=plant">
                     <img src="projectimages/Bestian1.jpg" alt="Bestian 1">
