Editted content related to SsangRyeong park

--- a/projects/cultural.html
+++ b/projects/cultural.html
@@ -53,6 +53,15 @@
             </div>
         </div>
 
+        <!-- 아빠 단독 쌍령근린공원 내 설계 -->
+        <div class="card card--accent-left">
+            <div class="hscroll" aria-label="쌍령근린공원 이미지">
+                <a href="../project-detail.html?id=KIM-ssangryeong&cat=cultural">
+                    <img src="projectimages/쌍령근린공원1.png" alt="쌍령근린공원 1">
+                </a>
+            </div>
+        </div>
+
         <!-- 에이스빌딩 -->
         <div class="card card--accent-left">
             <div class="hscroll" aria-label="에이스빌딩 이미지">
