Added a sample text on the image boxes

--- a/projects/prize.html
+++ b/projects/prize.html
@@ -24,6 +24,7 @@
                     <img src="projectimages/잠수교1.png" alt="잠수교 1">
                 </a>
             </div>
+            <p style="text-align: center">잠수교, 문화의 다리 (2024)</p>
         </div>
 
         <div class="card card--accent-left">
